# euclid

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
euclid/: cli.py
euclid/agents/: assessor.py  navigator.py  socrates.py  verifier.py
euclid/core/: knowledge_graph.py  orchestrator.py  student_state.py
euclid/data/: math_graph.json
